fixed plotting notebook

--- a/notebooks/plot_results.ipynb
+++ b/notebooks/plot_results.ipynb
@@ -45,43 +45,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2592b776-60b4-4a0f-a1af-70832b4376bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Group by sample size (ncases)\n",
-    "# sample_sizes = df['ncases'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b5a46d9c-76c1-4c2a-9169-fce718e48df6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['ncases'] = df['ncases'].apply(lambda x: 964 if x==963 else x)"
+    "# df['ncases'] = df['ncases'].apply(lambda x: 964 if x==963 else x) # in case there was a rounding error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "097eb12d-ada3-4904-8bf2-54965d5bbdb7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Group by sample size (ncases)\n",
     "sample_sizes = df['ncases'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "29d8a5eb-9e40-4476-9834-cc832aec4a65",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sample_sizes = np.array([964, 1256])"
+    "# sample_sizes = np.array([964, 1256]) # in case there were more simulations in the folder / combined csv"
    ]
   },
   {
