--- a/notebooks/combine_CSVs_files.ipynb
+++ b/notebooks/combine_CSVs_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fad16bf8-69b9-4acd-afe6-77569dd0df63",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c076cf02-eaa5-444a-8848-e85ab740d255",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f476ecc7-f1e8-4174-b514-3631faf22ad8",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "fb71bb29-0811-4c07-8e0c-7bf400e88453",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "from datetime import datetime\n",
+    "\n",
+    "output_dir = \"out_csv\"\n",
+    "archive_dir = os.path.join(output_dir, \"archive\")\n",
+    "file_name = \"combined_SEQpower.csv\"\n",
+    "file_path = os.path.join(output_dir, file_name)\n",
+    "\n",
+    "os.makedirs(archive_dir, exist_ok=True)\n",
+    "\n",
+    "if os.path.exists(file_path):\n",
+    "    current_date = datetime.now().strftime(\"%Y-%m-%d\")\n",
+    "    dated_archive_dir = os.path.join(archive_dir, current_date)\n",
+    "    os.makedirs(dated_archive_dir, exist_ok=True)\n",
+    "    shutil.move(file_path, os.path.join(dated_archive_dir, file_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cc1e4509-9bca-497b-8c90-8a03490ad791",
    "metadata": {},
    "outputs": [],
@@ -274,14 +299,6 @@
    "source": [
     "___"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb71bb29-0811-4c07-8e0c-7bf400e88453",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
